Incorporate changes from deform_bootstrap 0.2.6.

--- a/deform_bootstrap_extra/static/bootstrap_fixes_for_deform.css
+++ b/deform_bootstrap_extra/static/bootstrap_fixes_for_deform.css
@@ -33,6 +33,7 @@
 
 .control-group.error > .control-label,
 .control-group.error > .controls > .help-inline,
+.control-group.error > .controls > .help-block,
 legend.error {
   color: #B94A48;
 }
